@@ -1,5 +1,9 @@
 Version 1.0.0 -- 25 July 2007
 ------------------------------------------------------------------
+7 August 2007
++ Reduced size of lorum text.
++ Had several problems with editing pages. Should be fixed.
+
 24 July 2007
 + Added created and updated dates to page listing
 + Added search to page listing
